<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="kztproject.jp.splacounter.ui_common.BindingUtils"/>

        <variable
            name="viewModel"
            type="kztproject.jp.splacounter.reward.presentation.detail.RewardDetailViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.reward.name}"
                android:hint="@string/hint_title"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.reward.description}"
                android:singleLine="true"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/consume_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={BindingUtils.toString(viewModel.reward.consumePoint)}"
                android:hint="@string/hint_point"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/consume_probability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={BindingUtils.toString(viewModel.reward.probability)}"
                android:hint="@string/hint_probability"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="@={viewModel.reward.needRepeat}"
            android:textSize="18sp"
            android:text="@string/check_repeat"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewModel.saveReward()}"
            android:text="@string/button_add" />

    </LinearLayout>
</layout>